package br.com.academico.Evento;

public interface IEvento {
    public void inscrever();
}
