package br.com.academico.Projeto;

public interface IProjeto {
    public void submeterProjetoPesquisa();

    public void submeterProjetoExtensao();
}
